# libCLI

./: CMakeLists.txt  readme.md  tests.py  todo.md
example/: CMakeLists.txt  Makefile  cli.c  commands.c  example  main.c
inc/: cli.h
include/: cli.h
include/cli/: cli.h  implementation.inc
include/cli/internal/: parse.h
include/internal/: parse.h
include/macrocli/: implementation.inc  macrocli.h
include/macrocli/internal/: builtin_help.inc  builtin_help_general.inc  builtin_help_topic.inc  command_lookup.inc  error_handling.inc  parse.h
source/: cli.c  cli_internal.c  parse.c
src/: cli.c
tests/: parse_tests.c  tests.c
